# pcnewsgpt

./: .env  .gitignore  ImprovementConcepts.md  PDFimportTester.py  README.md  abfrage.py  abfrage_neu.py  dumpDB.py  import.py  importTesterPDF.py  pyproject.toml  requirements.txt  test_llama-cpp-python_install.ipynb
assets/: PCnewsGPT - für PC-News.docx
tests/: PDFimportLLManalysieren.py  dumpDB.py  dumpPDFs.py  test_PyMUPDF.ipynb  test_llama-cpp-python_install.ipynb
